# AbstraK

./: .env.example  .gitignore  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
artifacts/: README.md
benchmarks/capability-gate-a100/: study.json
benchmarks/capability-gate-a100/canaries/: mapping.py  schedule.py  schedule_mapping.py
benchmarks/capability-gate-a100/experts/: gated_silu_static.py  gelu_static.py  gemm_bias_relu_mirror_static.py  gemm_large_k_static.py  gemm_small_k_irregular_static.py  rmsnorm_wide_static.py  (+2 more)
configs/: README.md
configs/examples/: auth.example.json  config.example.yaml  model.openai-compatible.example.yaml  provider.openai-compatible.example.yaml
configs/studies/: kernelbench-naive-screen.yaml  kernelbench-naive-smoke.yaml
docs/: kernelbench-naive-screen.md  p0.1-provider-conformance.md  r1-a100-implementation-plan.md  r1-a100-rapid-validation-plan.md  r1-a100-results.md  tilelang-capability-gate-plan.md
scripts/: activate-a100.sh  activate-volume-tools.sh  bootstrap-a100.sh  smoke-kernelbench-backend.py  update-worker.sh
src/abstrak/: __init__.py  config.py  doctor.py
tests/: conftest.py  test_canary_analysis.py  test_canary_artifacts.py  test_canary_baselines.py  test_canary_capabilities.py  test_canary_capability_assets.py  test_canary_cli.py  test_canary_contracts.py  test_canary_evaluator.py  test_canary_fallback.py  test_canary_gates.py  test_canary_loop.py  test_canary_manifests.py  test_canary_matrix.py  test_canary_matrix_floor_evidence.py  test_canary_matrix_preflight.py  test_canary_matrix_runner.py  test_canary_matrix_runtime.py  test_canary_matrix_study.py  test_canary_postprocess_timing.py  test_canary_protocol.py  test_canary_remote.py  test_canary_report.py  test_canary_schedule.py  test_canary_study.py  test_canary_target_adapters.py  test_canary_targets.py  test_canary_tasks.py  test_canary_timing.py  test_canary_worker.py  test_doctor.py  test_kernelbench_evaluation.py  test_litellm_transport_integration.py  test_provider_client.py  test_provider_conformance.py  test_provider_manifests.py  test_provider_transport.py  test_user_config.py
(+86 files in other folders)
