[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abstrak"
version = "0.1.0"
description = "Abstraction-aware experiments for agentic GPU kernel engineering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "litellm==1.92.0",
  "pydantic>=2.11,<3",
  "pyyaml>=6.0.2,<7",
]

[project.scripts]
abstrak-doctor = "abstrak.doctor:main"
abstrak-provider = "abstrak.providers.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/abstrak"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
