[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abstrak"
version = "0.1.0"
description = "Abstraction-aware experiments for agentic GPU kernel engineering"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
  "litellm==1.92.0",
  "pydantic>=2.11,<3",
  "pyyaml>=6.0.2,<7",
  "tomli>=2.2,<3",
]

[project.optional-dependencies]
gpu = [
  "cuda-bindings==12.9.5",
  "cuda-python==12.9.5",
  "einops>=0.8.1,<0.9",
  "ninja>=1.13,<2",
  "numpy>=2.0,<2.3",
  "nvidia-cutlass-dsl==4.6.1",
  "tabulate>=0.9,<1",
  "tilelang==0.1.12",
  "torch==2.13.0",
]

[project.scripts]
abstrak-canary = "abstrak.canary.cli:main"
abstrak-doctor = "abstrak.doctor:main"
abstrak-kernelbench = "abstrak.evaluation.cli:main"
abstrak-provider = "abstrak.providers.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/abstrak"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
